cleaned some uncessecary comments in the codes

--- a/about.html
+++ b/about.html
@@ -12,21 +12,28 @@
     </div>
 
     <header>
-        <nav>
-            <div class="logo">
-                <div class="logo-icon">☕</div>
-                <span>Brew & Bond</span>
-            </div>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="#about">About Us</a></li>
-                <li><a href="products.html">Products</a></li>
-                <li><a href="branches.html">Branches</a></li>
-                <li><a href="testimonials.html">Testimonials</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+    <nav>
+        <div class="logo">
+            <div class="logo-icon">☕</div>
+            <span>Brew & Bond</span>
+        </div>
+        
+        <div class="hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+        
+        <ul class="nav-items">
+            <li><a href="index.html" class="nav-item">Home</a></li>
+            <li><a href="about.html" class="nav-item">About Us</a></li>
+            <li><a href="products.html" class="nav-item">Products</a></li>
+            <li><a href="branches.html" class="nav-item">Branches</a></li>
+            <li><a href="testimonials.html" class="nav-item">Testimonials</a></li>
+            <li><a href="contact.html" class="nav-item">Contact</a></li>
+        </ul>
+    </nav>
+</header>
 
     <section class="about-hero">
         <div class="about-container">
@@ -134,9 +141,9 @@
                 <p>© 2025 Brew & Bond. All rights reserved.</p>
             </div>
             <div class="social-links">
-                <a href="#" aria-label="Instagram">📷</a>
-                <a href="#" aria-label="Facebook">f</a>
-                <a href="#" aria-label="Twitter">🐦</a>
+                <a href="https://www.instagram.com/beejoorn.dev_web/" aria-label="Instagram">📷</a>
+                <a href="https://www.facebook.com/HervyTanamal" aria-label="Facebook">f</a>
+                <a href="https://www.linkedin.com/in/bjorn-tanamal/" aria-label="Linkedin">in</a>
             </div>
         </div>
     </footer>
