--- a/testimonials.html
+++ b/testimonials.html
@@ -12,23 +12,30 @@
     </div>
 
     <header>
-        <nav>
-            <div class="logo">
-                <div class="logo-icon">☕</div>
-                <span>Brew & Bond</span>
-            </div>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="products.html">Products</a></li>
-                <li><a href="branches.html">Branches</a></li>
-                <li><a href="#">Testimonials</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+    <nav>
+        <div class="logo">
+            <div class="logo-icon">☕</div>
+            <span>Brew & Bond</span>
+        </div>
+        
+        <div class="hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+        
+        <ul class="nav-items">
+            <li><a href="index.html" class="nav-item">Home</a></li>
+            <li><a href="about.html" class="nav-item">About Us</a></li>
+            <li><a href="products.html" class="nav-item">Products</a></li>
+            <li><a href="branches.html" class="nav-item">Branches</a></li>
+            <li><a href="testimonials.html" class="nav-item">Testimonials</a></li>
+            <li><a href="contact.html" class="nav-item">Contact</a></li>
+        </ul>
+    </nav>
+</header>
 
-    <section class="page-header">
+    <section class="page-header scale-in">
         <span class="badge">What People Say</span>
         <h1 class="scale-in">Customer Stories</h1>
         <p class="subtitle scale-in">Don't just take our word for it. Here's what our community has to say about their Brew & Bond experience.</p>
@@ -126,9 +133,9 @@
     </section>
 
     <section class="share-experience">
-        <h2 class="scale-in">Share Your Experience</h2>
-        <p>Loved your visit? We'd love to hear about it! Tag us on social media.</p>
-        <div class="tags">
+        <h2 class="fade-in">Share Your Experience</h2>
+        <p class="fade-in">Loved your visit? We'd love to hear about it! Tag us on social media.</p>
+        <div class="tags fade-in">
             <span class="pill">@brewandbond.ph</span>
             <span class="pill">#BrewAndBond</span>
             <span class="pill">#CoffeeLovers</span>
@@ -145,9 +152,9 @@
                 <p>© 2025 Brew & Bond. All rights reserved.</p>
             </div>
             <div class="social-links">
-                <a href="#" aria-label="Instagram">📷</a>
-                <a href="#" aria-label="Facebook">f</a>
-                <a href="#" aria-label="Twitter">🐦</a>
+                <a href="https://www.instagram.com/beejoorn.dev_web/" aria-label="Instagram">📷</a>
+                <a href="https://www.facebook.com/HervyTanamal" aria-label="Facebook">f</a>
+                <a href="https://www.linkedin.com/in/bjorn-tanamal/" aria-label="Linkedin">in</a>
             </div>
         </div>
     </footer>
