--- a/contact.html
+++ b/contact.html
@@ -12,25 +12,34 @@
     </div>
 
     <header>
-        <nav>
-            <div class="logo">
-                <div class="logo-icon">☕</div>
-                <span>Brew & Bond</span>
-            </div>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="products.html">Products</a></li>
-                <li><a href="branches.html">Branches</a></li>
-                <li><a href="testimonials.html">Testimonials</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+    <nav>
+        <div class="logo">
+            <div class="logo-icon">☕</div>
+            <span>Brew & Bond</span>
+        </div>
+        
+        <div class="hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+        
+        <ul class="nav-items">
+            <li><a href="index.html" class="nav-item">Home</a></li>
+            <li><a href="about.html" class="nav-item">About Us</a></li>
+            <li><a href="products.html" class="nav-item">Products</a></li>
+            <li><a href="branches.html" class="nav-item">Branches</a></li>
+            <li><a href="testimonials.html" class="nav-item">Testimonials</a></li>
+            <li><a href="contact.html" class="nav-item">Contact</a></li>
+        </ul>
+    </nav>
+</header>
+
+    <div class="menu-overlay"></div>
 
     <!-- Hero Section -->
     <section class="contact-hero fade-in">
-        <div class="hero-badge">Get in Touch</div>
+         <span class="badge">Get in Touch</span>
         <h1>Let's Connect</h1>
         <p>Have questions, feedback, or just want to say hi? Reach out to us through our social media channels. We love hearing from our coffee community!</p>
     </section>
@@ -92,7 +101,7 @@
         <div class="visit-content fade-in">
             <h2>Prefer to Visit in Person?</h2>
             <p>Nothing beats a face-to-face conversation over a fresh cup of coffee. Find your nearest branch and drop by!</p>
-            <a href="#" class="btn">📍 Find a Branch</a>
+            <a href="branches.html" class="btn">📍 Find a Branch</a>
         </div>
     </section>
 
@@ -106,9 +115,9 @@
                 <p>© 2025 Brew & Bond. All rights reserved.</p>
             </div>
             <div class="social-links">
-                <a href="#" aria-label="Instagram">📷</a>
-                <a href="#" aria-label="Facebook">f</a>
-                <a href="#" aria-label="Twitter">🐦</a>
+                <a href="https://www.instagram.com/beejoorn.dev_web/" aria-label="Instagram">📷</a>
+                <a href="https://www.facebook.com/HervyTanamal" aria-label="Facebook">f</a>
+                <a href="https://www.linkedin.com/in/bjorn-tanamal/" aria-label="Linkedin">in</a>
             </div>
         </div>
     </footer>
