--- a/products.html
+++ b/products.html
@@ -12,21 +12,28 @@
     </div>
 
     <header>
-        <nav>
-            <div class="logo">
-                <div class="logo-icon">☕</div>
-                <span>Brew & Bond</span>
-            </div>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="#products">Products</a></li>
-                <li><a href="branches.html">Branches</a></li>
-                <li><a href="testimonials.html">Testimonials</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+    <nav>
+        <div class="logo">
+            <div class="logo-icon">☕</div>
+            <span>Brew & Bond</span>
+        </div>
+        
+        <div class="hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+        
+        <ul class="nav-items">
+            <li><a href="index.html" class="nav-item">Home</a></li>
+            <li><a href="about.html" class="nav-item">About Us</a></li>
+            <li><a href="products.html" class="nav-item">Products</a></li>
+            <li><a href="branches.html" class="nav-item">Branches</a></li>
+            <li><a href="testimonials.html" class="nav-item">Testimonials</a></li>
+            <li><a href="contact.html" class="nav-item">Contact</a></li>
+        </ul>
+    </nav>
+</header>
 
     <section class="products-hero fade-in">
         <span class="badge">Our Menu</span>
@@ -65,7 +72,7 @@
             </div>
             <div class="product-card scale-in stagger-delay-3">
                 <div class="product-image">
-                    <img src="https://images.unsplash.com/photo-1561047029-3000c68339ca?w=500&h=500&fit=crop" alt="Flat White">
+                    <img src="https://images.unsplash.com/photo-1506619216599-9d16d0903dfd?q=80&w=1169&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Flat White">
                 </div>
                 <div class="product-info">
                     <div class="product-name">Flat White</div>
@@ -77,7 +84,7 @@
             </div>
             <div class="product-card scale-in stagger-delay-4">
                 <div class="product-image">
-                    <img src="https://images.unsplash.com/photo-1461023058943-07fcbe16d735?w=500&h=500&fit=crop" alt="Cafe Latte">
+                    <img src="https://images.unsplash.com/photo-1559001724-fbad036dbc9e?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8bGF0dGV8ZW58MHx8MHx8fDA%3D" alt="Cafe Latte">
                 </div>
                 <div class="product-info">
                     <div class="product-name">Cafe Latte</div>
@@ -89,7 +96,7 @@
             </div>
             <div class="product-card scale-in stagger-delay-5">
                 <div class="product-image">
-                    <img src="https://images.unsplash.com/photo-1578374173705-0a5a4a1c2d72?w=500&h=500&fit=crop" alt="Cafe Mocha">
+                    <img src="https://images.unsplash.com/photo-1619286310410-a95de97b0aec?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTF8fG1vY2hhfGVufDB8fDB8fHww" alt="Cafe Mocha">
                 </div>
                 <div class="product-info">
                     <div class="product-name">Cafe Mocha</div>
@@ -101,7 +108,7 @@
             </div>
             <div class="product-card scale-in stagger-delay-6">
                 <div class="product-image">
-                    <img src="https://images.unsplash.com/photo-1599750465654-448c73a2e0b7?w=500&h=500&fit=crop" alt="Caramel Macchiato">
+                    <img src="https://images.unsplash.com/photo-1559496417-e7f25cb247f3?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fGNvZmZlZXxlbnwwfHwwfHx8MA%3D%3D" alt="Caramel Macchiato">
                 </div>
                 <div class="product-info">
                     <div class="product-name">Caramel Macchiato</div>
@@ -123,7 +130,7 @@
         <div class="products-grid">
             <div class="product-card scale-in stagger-delay-1">
                 <div class="product-image">
-                    <img src="https://images.unsplash.com/photo-1517487881594-2787fef5ebf7?w=500&h=500&fit=crop" alt="Iced Americano">
+                    <img src="https://images.unsplash.com/photo-1581996323441-538096e854b9?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8YW1lcmljYW5vfGVufDB8fDB8fHww" alt="Iced Americano">
                 </div>
                 <div class="product-info">
                     <div class="product-name">Iced Americano</div>
@@ -135,7 +142,7 @@
             </div>
             <div class="product-card scale-in stagger-delay-2">
                 <div class="product-image">
-                    <img src="https://images.unsplash.com/photo-1517487881594-2787fef5ebf7?w=500&h=500&fit=crop" alt="Iced Brew">
+                    <img src="https://images.unsplash.com/photo-1504753793650-d4a2b783c15e?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8N3x8aWNlZCUyMGJyZXd8ZW58MHx8MHx8fDA%3D" alt="Iced Brew">
                 </div>
                 <div class="product-info">
                     <div class="product-name">Iced Brew</div>
@@ -159,7 +166,7 @@
             </div>
             <div class="product-card scale-in stagger-delay-4">
                 <div class="product-image">
-                    <img src="https://images.unsplash.com/photo-1599750465654-448c73a2e0b7?w=500&h=500&fit=crop" alt="Iced Caramel Macchiato">
+                    <img src="https://images.unsplash.com/photo-1582572430474-3acf30221916?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTZ8fGljZWQlMjBicmV3fGVufDB8fDB8fHww" alt="Iced Caramel Macchiato">
                 </div>
                 <div class="product-info">
                     <div class="product-name">Iced Caramel Macchiato</div>
@@ -171,7 +178,7 @@
             </div>
             <div class="product-card scale-in stagger-delay-5">
                 <div class="product-image">
-                    <img src="https://images.unsplash.com/photo-1578374173705-0a5a4a1c2d72?w=500&h=500&fit=crop" alt="Iced Mocha">
+                    <img src="https://images.unsplash.com/photo-1596078841463-5504c992222f?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8aWNlZCUyMG1vY2hhfGVufDB8fDB8fHww" alt="Iced Mocha">
                 </div>
                 <div class="product-info">
                     <div class="product-name">Iced Mocha</div>
@@ -193,7 +200,7 @@
         <div class="products-grid">
             <div class="product-card scale-in stagger-delay-1">
                 <div class="product-image">
-                    <img src="https://images.unsplash.com/photo-1570968915860-54d5c301fa9f?w=500&h=500&fit=crop" alt="Spanish Latte">
+                    <img src="https://plus.unsplash.com/premium_photo-1673459683929-3f3574de7e75?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8c3BhbmlzaCUyMGxhdHRlfGVufDB8fDB8fHww" alt="Spanish Latte">
                 </div>
                 <div class="product-info">
                     <div class="product-name">Spanish Latte</div>
@@ -205,7 +212,7 @@
             </div>
             <div class="product-card scale-in stagger-delay-2">
                 <div class="product-image">
-                    <img src="https://images.unsplash.com/photo-1536013690845-44ea5e5a6dbb?w=500&h=500&fit=crop" alt="Matcha Latte">
+                    <img src="https://images.unsplash.com/photo-1624893578106-a98840591afc?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fG1hdGNoYXxlbnwwfHwwfHx8MA%3D%3D" alt="Matcha Latte">
                 </div>
                 <div class="product-info">
                     <div class="product-name">Matcha Latte</div>
@@ -217,7 +224,7 @@
             </div>
             <div class="product-card scale-in stagger-delay-3">
                 <div class="product-image">
-                    <img src="https://images.unsplash.com/photo-1608039829572-78524f79c4c7?w=500&h=500&fit=crop" alt="Affogato">
+                    <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcSOebUeOhIlXenIIQI_uzixLLmsHrUGhywebQQkW6TyCDd1ozzPCJvjATCrCCWN" alt="Affogato">
                 </div>
                 <div class="product-info">
                     <div class="product-name">Affogato</div>
@@ -229,7 +236,7 @@
             </div>
             <div class="product-card scale-in stagger-delay-4">
                 <div class="product-image">
-                    <img src="https://images.unsplash.com/photo-1562887283-52dc8e44f306?w=500&h=500&fit=crop" alt="Salted Caramel Cold Brew">
+                    <img src="https://images.unsplash.com/photo-1591619706980-e7595aac07ab?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fHNhbHRlZCUyMGNhcmFtZWwlMjBicmV3fGVufDB8fDB8fHww" alt="Salted Caramel Cold Brew">
                 </div>
                 <div class="product-info">
                     <div class="product-name">Salted Caramel Cold Brew</div>
@@ -251,7 +258,7 @@
         <div class="products-grid">
             <div class="product-card scale-in stagger-delay-1">
                 <div class="product-image">
-                    <img src="https://images.unsplash.com/photo-1536013690845-44ea5e5a6dbb?w=500&h=500&fit=crop" alt="Iced Matcha">
+                    <img src="https://plus.unsplash.com/premium_photo-1663853489900-3f24ea776dea?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8aWNlZCUyMG1hdGNoYXxlbnwwfHwwfHx8MA%3D%3D" alt="Iced Matcha">
                 </div>
                 <div class="product-info">
                     <div class="product-name">Iced Matcha</div>
@@ -263,7 +270,7 @@
             </div>
             <div class="product-card scale-in stagger-delay-2">
                 <div class="product-image">
-                    <img src="https://images.unsplash.com/photo-1542990253-0d0f5be5f0ed?w=500&h=500&fit=crop" alt="Dark Chocolate">
+                    <img src="https://images.unsplash.com/photo-1642647392045-8592bf9b5900?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8ZGFyayUyMGNob2NvbGF0ZSUyMGJyZXd8ZW58MHx8MHx8fDA%3D" alt="Dark Chocolate">
                 </div>
                 <div class="product-info">
                     <div class="product-name">Dark Chocolate</div>
@@ -275,10 +282,10 @@
             </div>
             <div class="product-card scale-in stagger-delay-3">
                 <div class="product-image">
-                    <img src="https://images.unsplash.com/photo-1571934811356-5cc061b6821f?w=500&h=500&fit=crop" alt="Iced Matcha">
+                    <img src="https://images.unsplash.com/photo-1578899952107-9c390f1af1b7?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8Y2hhaSUyMGxhdHRlfGVufDB8fDB8fHww" alt="Iced Matcha">
                 </div>
                 <div class="product-info">
-                    <div class="product-name">Iced Matcha</div>
+                    <div class="product-name">Chai Latte</div>
                     <div class="product-footer">
                         <span class="product-price">₱155</span>
                         <button class="add-btn">Add</button>
@@ -333,7 +340,7 @@
             </div>
             <div class="product-card scale-in stagger-delay-4 prod-footer-margin">
                 <div class="product-image">
-                    <img src="https://images.unsplash.com/photo-1557925923-cd4648e211a0?w=500&h=500&fit=crop" alt="Cinnamon Roll">
+                    <img src="https://images.unsplash.com/photo-1593872571314-4a735d4b27b0?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8Y2lubmFtb24lMjByb2xsfGVufDB8fDB8fHww" alt="Cinnamon Roll">
                 </div>
                 <div class="product-info">
                     <div class="product-name">Cinnamon Roll</div>
@@ -356,9 +363,9 @@
                 <p>© 2025 Brew & Bond. All rights reserved.</p>
             </div>
             <div class="social-links">
-                <a href="#" aria-label="Instagram">📷</a>
-                <a href="#" aria-label="Facebook">f</a>
-                <a href="#" aria-label="Twitter">🐦</a>
+                <a href="https://www.instagram.com/beejoorn.dev_web/" aria-label="Instagram">📷</a>
+                <a href="https://www.facebook.com/HervyTanamal" aria-label="Facebook">f</a>
+                <a href="https://www.linkedin.com/in/bjorn-tanamal/" aria-label="Linkedin">in</a>
             </div>
         </div>
     </footer>
